table: fix alignments
As proposed upstream in https://github.com/devinhunt/typebase.css/pull/19

--- a/index.css
+++ b/index.css
@@ -79,6 +79,7 @@ td,
 th {
   padding: 0;
   line-height: calc(var(--base-line-height) * var(--base-font-size) - 0px);
+  vertical-align: top;
 }
 
 code {
